--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,8 @@
                 <p>I am Chia-Ho Lin, a M.S. student in NTU <a href="http://video.ee.ntu.edu.tw/">Digital Signal Processing and Integrated Circuit Lab</a>,</p> 
                 <p>which is lead by Prof. <a href="http://www.ee.ntu.edu.tw/profile?id=26">Liang-Gee Chen</a>.</p>
                 <p>My interests span Computer Vision and Deep Learning.</p>
-                <p>My research focuses on understanding human daily life through wearable devices.	Now I'm working on algorithm and architecture design about egocentric human-object interaction.</p>
+                <p>My research focuses on understanding human daily life through wearable devices.</p>	
+                <p>Now I'm working on algorithm and architecture design about egocentric human-object interaction.</p>
                 <p>Contact: <a href="mailto:chiahoo2004@gmail.com">E-mail</a> & <a href="https://drive.google.com/open?id=1uU-85Iw2k_1kkG0iHnDbF-pXrYwlEbOu">CV</a></p>
                 <br/>
               </div>
